# kexec-e2k

./: .gitignore  LICENSE  Makefile  README.md  common.h  fbreset.c  iommucheck.c  kexec-e2k.c  kexec-lintel.c  meson.build  meson_options.txt  version.c.in
